--- a/aima-vlc-7/export_presets.cfg
+++ b/aima-vlc-7/export_presets.cfg
@@ -3,13 +3,13 @@
 name="Windows Desktop"
 platform="Windows Desktop"
 runnable=true
-advanced_options=false
+advanced_options=true
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=".kra"
-export_path="../../EXPORTS/anima-vlc-7/Plomes_Piulades.exe"
+export_path="../../EXPORTS/anima-vlc-7/w/Plomes_Piulades.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -34,7 +34,7 @@ codesign/custom_options=PackedStringArray()
 application/modify_resources=true
 application/icon=""
 application/console_wrapper_icon=""
-application/icon_interpolation=4
+application/icon_interpolation=0
 application/file_version=""
 application/product_version=""
 application/company_name="Punic Goose"
@@ -74,7 +74,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=".kra"
-export_path=""
+export_path="../../EXPORTS/anima-vlc-7/index.html"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -100,7 +100,7 @@ progressive_web_app/ensure_cross_origin_isolation_headers=true
 progressive_web_app/offline_page=""
 progressive_web_app/display=1
 progressive_web_app/orientation=1
-progressive_web_app/icon_144x144=""
-progressive_web_app/icon_180x180=""
-progressive_web_app/icon_512x512=""
+progressive_web_app/icon_144x144="res://sprites/birds/pfp/pfp_verdecillo.png"
+progressive_web_app/icon_180x180="res://sprites/birds/pfp/pfp_verdecillo.png"
+progressive_web_app/icon_512x512="res://sprites/birds/pfp/pfp_verdecillo.png"
 progressive_web_app/background_color=Color(0, 0, 0, 1)
